--- a/Sprint 1/filmFinder/templates/search_temp.html
+++ b/Sprint 1/filmFinder/templates/search_temp.html
@@ -8,6 +8,15 @@
 		<li style = "color: #ec7532;">Search result</li>
 	 </ul>
 </div>
+{% with messages = get_flashed_messages(with_categories=true) %}
+		  	{% if messages %}
+          {% for category, message in messages %}
+          <div class="bootstrapiso">
+            <div class="alert  alert-primary alert-{{ category }}" role="alert">{{ message }}</div>
+          </div>
+			  	{% endfor %}
+		  	{% endif %}
+      {% endwith%} 
 <h1 class = 'center'>Search Results:</h1>
 <hr>
     <form method="POST">
