--- a/Sprint 1/filmFinder/templates/wishlist.html
+++ b/Sprint 1/filmFinder/templates/wishlist.html
@@ -12,6 +12,15 @@
             <li style = "color: #ec7532;">My wishlist</li>
          </ul>
     </div>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+		  	{% if messages %}
+          {% for category, message in messages %}
+          <div class="bootstrapiso">
+            <div class="alert  alert-primary alert-{{ category }}" role="alert">{{ message }}</div>
+          </div>
+			  	{% endfor %}
+		  	{% endif %}
+      {% endwith%} 
     <div class = "bootstrapiso acc-mar">
         <div class="content-section">
             <div class="media">
