--- a/Sprint 1/filmFinder/templates/home.html
+++ b/Sprint 1/filmFinder/templates/home.html
@@ -235,7 +235,7 @@
 								</a>
 							</div>
 							<div class="movie-name">
-								<a href="film/{{highest_rating_movies.0.id}}">{{movies.0.title}}</a>
+								<a href="film/{{highest_rating_movies.0.id}}">{{highest_rating_movies.0.title}}</a>
 							</div>
 							<div class="movie-rating">
 								<div class="rating-star"></div>
