--- a/Sprint 1/filmFinder/templates/home.html
+++ b/Sprint 1/filmFinder/templates/home.html
@@ -49,7 +49,7 @@
 				 Recommend For You
 				</div>
 				<div class="recom-more">
-					<a href=" ">More>></a >
+					<a href="{{url_for('results',flag=0)}}">More>></a>
 				</div>
 			</div>
 			<div class="movie-recom-content">
@@ -219,7 +219,7 @@
 				Highest rating films
 				</div>
 				<div class="recom-more">
-					<a href=" ">More>></a >
+					<a href="{{ url_for('results',flag=1)}}">More>></a>
 				</div>
 			</div>
 			<div class="movie-recom-content">
