--- a/Sprint 1/filmFinder/templates/wishlist.html
+++ b/Sprint 1/filmFinder/templates/wishlist.html
@@ -34,28 +34,31 @@
                     {%endif%}
                 </div>   
             </div>
+        </div>
             <hr>
-            <br>   
+            <h3 class="center">My wishlist:</h3>
             {%if wishlist == []%}
             <h1>You have not add any films into your wishlist!</h1>
             {%else%}
-            <div class="demo">
+            <div class="demo bootstrapiso">
                 <ul>
                 {%for movie in wishlist%}
-                    <li class="mat20 kk">  
-                        <h6 class="center">{{movie.title}}</h6>
-                        <br>
-                        <img src="../static/poster_downloads/{{movie.poster_path}}.jpg">
-                        <br>
-                        <form action="../wishlist/{{current_user.id}}" method="POST">
-                            <button type="submit" name="remove_from_wishlist" value="{{movie.id}}">Remove</button>
-                        </form>
+                    <li class="mat20 kk row no-gutters">
+                        <div class="col-5"><img src="../static/poster_downloads/{{movie.poster_path}}.jpg"></div>
+                        <div class="col-7" style="margin-top:5%;"><h6>{{movie.title}}</h6>
+                        <p><form action="../wishlist/{{current_user.id}}" method="POST">
+                            <div class="buttons">
+                            <button class="draw meet" style="font-size: 10px;"type="submit" name="remove_from_wishlist" value="{{movie.id}}">Remove</button>
+                            </div>
+                        </form></p></div>
                     </li>
                 {%endfor%}              
                 </ul>
-            </div>     
+
+            </div> 
+            
             {%endif%}   
         </div>
-    </div>
+    
 </body>
 {% endblock content %}
