--- a/Sprint 1/filmFinder/static/movie.css
+++ b/Sprint 1/filmFinder/static/movie.css
@@ -22,9 +22,8 @@
 	/*border: 2px solid palevioletred;*/
 }
 .home-box{
-	border-top: 2px solid rgb(5, 5, 5);
+
 	border-bottom: 2px solid rgb(5, 5, 5);
-	border-radius: 20px;
 	padding:25px 10px;
 	margin-bottom: 30px;
 
@@ -269,3 +268,25 @@
 	text-align: center;
 	/* border: 2px solid palevioletred; */
 }
+
+/* ul.pagination {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+ul.pagination li {display: inline;}
+
+ul.pagination li a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+ul.pagination li a.active {
+    background-color: #4CAF50;
+	color: white;
+	border: 2px solid palevioletred;
+}
+
+ul.pagination li a:hover:not(.active) {background-color: #ddd;} */
