--- a/filmFinder/templates/about.html
+++ b/filmFinder/templates/about.html
@@ -11,12 +11,12 @@
 <article style="margin:0 5% 0 5%">
 	<h1>About Page</h1>
 	<p style="text-indent:2em;">People these days are more likely to find movies to watch online instead of 
-    going to the cinema. There are lots of websites that can feed costumers with 
-    functions like searching movies, rating, and commenting them. This project
-    (FilmFinder)'s aim is to create a web application which can accomplish some 
-    functions that other film-critics websites have and some they do not.</p>
-    <ul>FilmFinder web app contains functions that are listed below:
-      <li>Login and logout.</li>
+    going to the cinema. here are many websites that can feed costumers with functions like searching movies, 
+    rating, and commenting them. FilmFinder is a web platform for finding movies you like with the aid of our 
+    recommendation system and it comes with additional features that other sites lack.</p>
+    <ul>Below is the full list of FilmFinder features:
+      <br><br>
+      <li>User authentication.</li>
       <li>Basic search for certain movies and advanced search that can let user filter out results.
       </li>
       <li>Recommend movies based on user’s rating history(both User-Based Collaborate Filtering and Item-Based Collaborate Filtering). 
