--- a/filmFinder/templates/about.html
+++ b/filmFinder/templates/about.html
@@ -10,26 +10,26 @@
 </div>
 <article style="margin:0 5% 0 5%">
     <h1>About Page</h1>
-    <p style="text-indent:2em;">People these days are more likely to find movies to watch online instead of 
-    going to the cinema. here are many websites that can feed costumers with functions like searching movies, 
-    rating, and commenting them. FilmFinder is a web platform for finding movies you like with the aid of our 
-    recommendation system and it comes with additional features that other sites lack.</p>
-    <ul>Below is the full list of FilmFinder features:
+    <p style="font-size: 20px;">People these days are more likely to find movies to watch online instead of going to the 
+    cinema. There are many websites that can feed costumers with functions like searching movies, rating, and commenting 
+    them. FilmFinder is a web platform for finding movies you like with the aid of our recommendation system and it comes 
+    with additional features that other sites lack.</p>
+    <ul style="font-size:20px;">Below is the full list of FilmFinder features:
       <br><br>
-      <li>User authentication.</li>
-      <li>Basic search for certain movies and advanced search that can let user filter out results.
+      <li style="font-size:20px;">User authentication.</li>
+      <li style="font-size:20px;">Basic search for certain movies and advanced search that can let user filter out results.
       </li>
-      <li>Recommend movies based on user’s rating history(both User-Based Collaborate Filtering and Item-Based Collaborate Filtering). 
+      <li style="font-size:20px;">Recommend movies based on user’s rating history (User-Based Collaborate Filtering and Item-Based Collaborate Filtering). 
       </li>
-      <li>Wishlist and Blocklist.
+      <li style="font-size:20px;">Wishlist and Blocklist.
       </li>
-      <li>Leave comments and rate movies.
+      <li style="font-size:20px;">Leave comments and rate movies.
       </li>
-      <li>'Like' a review.
+      <li style="font-size:20px;">'Like' a review.
       </li>
-      <li>Real time movie rating for every user.
+      <li style="font-size:20px;">Real time movie rating for every user.
       </li>
-      <li>User profile information management.
+      <li style="font-size:20px;">User profile information management.
       </li>
     </ul>
 </article>
